samples/_failures_safe/1761561454_fa35d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6df2122.c: In function ‘main’:
./samples/SAFE/__tmp_b6df2122.c:130:5: error: expected declaration or statement at end of input
  130 |     } else {
      |     ^
./samples/SAFE/__tmp_b6df2122.c:130:5: error: expected declaration or statement at end of input
